@@ -1272,6 +1272,19 @@ The DISMOUNT will automatically dismount any riders on the affected.\n\r\
 The CAST parameter allows you to cause a spell to be cast upon all the properties mover, \
 or upon all the riders, when they try to enter a room that is restricted.
 
+PROP_MULTIEFFECTS=\
+Property   : Prop_MultiEffects\n\r\
+Targets    : MOBs, Items, Exits, Rooms\n\r\
+Parameters : [AbilityID] [AbilityID([args]) ... \n\r\
+Example    : Prop_WearAdjuster(INT+2),Prop_WearAdjuster(STR-2 MASK=-RACE +ELF)\n\r\
+Description: \n\r\
+Allows an object to have the same effect multiple times by embedding each version of the \
+effect into this property.  The list of effects is space (or comma) delimited, and can \
+optionally have arguments in parenthesis.  Make sure parenthesis in parameters match! \n\r\
+\n\r\
+Note: the parameters are write-only.  When looked at later, the parameters are turned into \
+an XML doc to protect the integrity of other properties that also transform their data.
+
 PROP_NARROWLEDGE=\
 Property   : Prop_NarrowLedge\n\r\
 Targets    : Rooms, Exits\n\r\
